Fix store alters margin on mobile

--- a/plugins/woocommerce-admin/client/layout/store-alerts/style.scss
+++ b/plugins/woocommerce-admin/client/layout/store-alerts/style.scss
@@ -4,7 +4,7 @@
 }
 
 .woocommerce-store-alerts {
-	margin-right: $gutter-large;
+	margin: 0 0 $gap-largest 0;
 	margin-right: var(--large-gap);
 	padding: $gap-large;
 	border: 0;
